# polaris

./: .gitignore  .markdownlint.json  .rumdl.toml  AGENT.md  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  review-api.yml
bindings/ts/: README.md  package.json  tsconfig.json
crates/polaris_agent/: Cargo.toml  README.md
crates/polaris_agent/src/: lib.rs
crates/polaris_app/: Cargo.toml  README.md
crates/polaris_app/src/: auth.rs  config.rs  io.rs  lib.rs  middleware.rs  plugin.rs  public_route.rs  request_context.rs  router.rs  ws.rs
crates/polaris_app/tests/: integration.rs
crates/polaris_core_plugins/: Cargo.toml  README.md
crates/polaris_core_plugins/persistence_macros/: Cargo.toml  README.md
crates/polaris_core_plugins/persistence_macros/src/: lib.rs
crates/polaris_core_plugins/src/: io.rs  lib.rs  otel_plugin.rs  persistence.rs  server_info.rs  span_processor_registry.rs  time.rs
crates/polaris_core_plugins/src/tracing_plugin/: buffer.rs  capture.rs  dashboard.rs  fmt_layer.rs  genai_content.rs  graph_middleware.rs  llm_decorator.rs  mod.rs  span_buffer.rs  span_record.rs  tool_decorator.rs  usage.rs  usage_pricing.rs
crates/polaris_core_plugins/src/tracing_plugin/instrument/: genai_content.rs  graph.rs  llm.rs  mod.rs  tool.rs
crates/polaris_core_plugins/src/tracing_plugin/span_store/: file.rs  memory.rs  mod.rs  plugin.rs
crates/polaris_core_plugins/tests/: span_store_cleanup_drain.rs  span_store_cross_restart.rs  span_store_hydration_list_error.rs  span_store_hydration_load_error.rs  span_store_live_subscriber.rs  span_store_standalone.rs  tracing_dashboard_http.rs  tracing_executor_repro.rs  tracing_run_tree_p95.rs  tracing_usage_http.rs
crates/polaris_dashboard/: Cargo.toml  README.md
crates/polaris_dashboard/src/: events.rs  lib.rs  plugin.rs  registry.rs
crates/polaris_dashboard/tests/: manifest.rs  manifest_union.rs
crates/polaris_graph/: Cargo.toml  README.md
crates/polaris_graph/src/: dev.rs  edge.rs  executor.rs  graph.rs  lib.rs  node.rs  predicate.rs
crates/polaris_graph/src/executor/: error.rs  mod.rs  run.rs
crates/polaris_graph/src/graph/: builder.rs  mod.rs  validation.rs
crates/polaris_graph/src/hooks/: api.rs  events.rs  mod.rs  schedule.rs
crates/polaris_graph/src/middleware/: api.rs  info.rs  mod.rs
crates/polaris_graph/tests/: composition.rs  context_policy_verbs.rs  edge_cases.rs  graph_builder.rs  hooks.rs  integration.rs  test_utils.rs  validation.rs
crates/polaris_internal/: Cargo.toml  README.md
crates/polaris_internal/src/: lib.rs
crates/polaris_macro_utils/: Cargo.toml  README.md
crates/polaris_macro_utils/src/: lib.rs
crates/polaris_model_providers/: Cargo.toml
crates/polaris_models/: Cargo.toml  README.md
crates/polaris_models/src/: dashboard.rs  lib.rs  plugin.rs  registry.rs
crates/polaris_models/src/llm/: builder.rs  collector.rs  error.rs  mod.rs  model.rs  provider.rs  types.rs
crates/polaris_models/src/tokenizer/: counter.rs  mod.rs  tiktoken.rs
crates/polaris_sessions/: Cargo.toml  README.md
crates/polaris_sessions/src/: api.rs  dashboard.rs  error.rs  guard.rs  info.rs  lib.rs  uptime.rs
crates/polaris_sessions/src/http/: error.rs  handlers.rs  io.rs  mod.rs  models.rs
crates/polaris_sessions/src/store/: file.rs  memory.rs  mod.rs
crates/polaris_sessions/tests/: fixtures_loadable.rs  http.rs  http_checkpoints.rs  http_dashboard.rs  http_stream_turns.rs  http_turns.rs  integration.rs  run_oneshot_preserved.rs  run_oneshot_tracing_survival.rs  tracing_dashboard_integration.rs
crates/polaris_sessions/tests/fixtures/sessions/: counter-midrun.json  fresh.json  long-running.json  react-with-tools.json
crates/polaris_shell/: Cargo.toml  README.md
crates/polaris_shell/src/: error.rs  executor.rs  lib.rs  permission.rs  plugin.rs  tools.rs
crates/polaris_shell/tests/: integration.rs
crates/polaris_system/: Cargo.toml
crates/polaris_system/src/: api.rs  lib.rs  server.rs
crates/polaris_system/src/param/: access.rs  mod.rs
crates/polaris_system/src/plugin/: build_param.rs  capability.rs  manifest.rs  mod.rs  schedule.rs
crates/polaris_system/src/resource/: mod.rs  output.rs  resource.rs
crates/polaris_system/src/system/: mod.rs
crates/polaris_system/system_macros/: Cargo.toml  README.md
crates/polaris_system/system_macros/src/: lib.rs
crates/polaris_system/tests/: concurrency.rs  system.rs  system_macro_tests.rs
crates/polaris_system/tests/compile_fail/: plugin_extends_non_contract.rs  plugin_missing_build.rs  plugin_missing_id.rs  plugin_non_build_param.rs  plugin_provides_non_contract.rs  plugin_ref_non_server.rs  return_type_mismatch.rs
crates/polaris_system/tests/compile_pass/: fallible_no_params.rs  fallible_system.rs  infallible_system.rs  non_fallible_early_return.rs  plugin_macro_basic.rs
crates/polaris_tools/: Cargo.toml  README.md
crates/polaris_tools/src/: builder.rs  context.rs  dashboard.rs  error.rs  lib.rs  permission.rs  registry.rs  schema.rs  tool.rs
crates/polaris_tools/tests/: compile_fail.rs  integration.rs
crates/polaris_tools/tests/compile_fail/: context_nested_option.rs  context_not_clone.rs  tool_namevalue_form.rs  tool_unknown_option.rs
crates/polaris_tools/tests/compile_pass/: context_only.rs  context_optional.rs  context_standalone.rs  context_toolset.rs  strict_opt_out.rs
crates/polaris_tools/tool_macros/: Cargo.toml  README.md
crates/polaris_tools/tool_macros/src/: common.rs  lib.rs  tool_fn.rs  toolset.rs
docs/: README.md  philosophy.md  taxonomy.md
docs/design/: http-mcp-infrastructure.md  memory.md  pattern-requirements-and-agent-patterns.md  scope-and-dynamic-nodes.md
docs/plans/: agent_harness_roadmap.md  terminal-based-coding-agent.md  tutorial-series.md  (+1 more)
examples/: Cargo.toml  README.md
examples/src/plugins/: file_tools.rs  mod.rs  terminal_io.rs
examples/src/react_agent/: agent.rs  config.rs  mod.rs
examples/tests/: plugins_lock.rs
src/: lib.rs
tests/: api_catalog.rs  plugin_catalog.rs  resource_catalog.rs
(+79 files in other folders)
