[package]
name = "polaris-ai"
version.workspace = true
edition.workspace = true
categories = ["asynchronous", "development-tools"]
description = "A unified agent runtime where agent patterns are first-class, composable, and optimizable abstractions."
exclude = ["assets/", "tools/", ".github/", "crates/"]
homepage = "https://getradiant.ai"
keywords = ["ai", "agents", "ecs", "async", "framework"]
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/polaris-ai"
repository.workspace = true
rust-version.workspace = true
autoexamples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[workspace]
resolver = "2"
members = [
    # All of Polaris internal crates
    "crates/*",
    "examples",
    "tools/feature-parity",
]

[workspace.package]
version = "0.4.4"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[workspace.dependencies]
ts-rs = "12"

[workspace.lints.clippy]
uninlined-format-args = "allow"
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"
print_stdout = "warn"
print_stderr = "warn"
ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[workspace.lints.rust]
missing_docs = "warn"
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[lints.clippy]
doc_markdown = "warn"
manual_let_else = "warn"
match_same_arms = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_complexity = "allow"
undocumented_unsafe_blocks = "warn"
unwrap_or_default = "warn"
needless_lifetimes = "allow"
too_many_arguments = "allow"
nonstandard_macro_braces = "warn"

ptr_as_ptr = "warn"
ptr_cast_constness = "warn"
ref_as_ptr = "warn"

too_long_first_doc_paragraph = "allow"

std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
alloc_instead_of_core = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
unsafe_op_in_unsafe_fn = "warn"
unused_qualifications = "warn"

[features]
# `file-store` is on by default to match the historical session-store
# behavior. Set `default-features = false` to opt out of `tokio/fs`.
default = ["file-store"]
anthropic = ["polaris_internal/anthropic"]
bedrock = ["polaris_internal/bedrock"]
openai = ["polaris_internal/openai"]
tiktoken = ["polaris_internal/tiktoken"]
# Enables the tracing-subscriber OTLP exporter and switches `polaris_app`'s
# HTTP request spans to OTel HTTP semantic-convention field names
# (`http.request.method`, `url.path`, etc., plus `otel.name` / `otel.kind`).
# Does not extract incoming W3C `traceparent` headers — each request starts a
# fresh trace.
otel = ["polaris_internal/otel"]
sessions-http = ["polaris_internal/sessions-http"]
# `MockClock` and `MockIOProvider` re-exports for downstream test code.
test-utils = ["polaris_internal/test-utils"]
# Filesystem-backed `SessionStore` (brings in `tokio/fs`). On by default; set
# `default-features = false` to opt out.
file-store = ["polaris_internal/file-store"]
# Generates TypeScript bindings for canonical Polaris types.
# Off by default so release builds do not pull `ts-rs` into the dep graph.
# Enabling this and running `cargo test --features typegen` writes `.ts`
# files into `bindings/ts/src/` (the `@polaris/types` npm package).
typegen = ["polaris_internal/typegen"]
dashboard = ["polaris_internal/dashboard"]

[dependencies]
polaris_internal = { path = "crates/polaris_internal", version = "0.4.4", default-features = false }
tracing = { version = "0.1.43", default-features = false }
