[package]
name = "examples"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"
publish = false

[features]
default = []
otel = ["polaris/otel"]

[lints.rust]
missing_docs = "allow"

[dependencies]
polaris = { path = ".." }
dotenvy = "0.15"
rustyline = "17.0.2"
schemars = "1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
similar = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
