[package]
name = "polaris_agent"
version.workspace = true
description = "Agent trait for defining reusable behavior patterns in Polaris."
edition.workspace = true
keywords = []
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_graph = { path = "../polaris_graph", version = "0.1.1" }
polaris_system = { path = "../polaris_system", version = "0.1.1" }
thiserror = "2"
