[package]
name = "polaris_agent"
version.workspace = true
description = "Agent trait for defining reusable behavior patterns in Polaris."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "agents", "ai", "async", "patterns"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_graph = { path = "../polaris_graph" }
polaris_system = { path = "../polaris_system" }
thiserror = "2"
