[package]
name = "polaris_app"
version.workspace = true
description = "Shared HTTP server runtime for Polaris products."
edition.workspace = true
keywords = ["polaris-ai", "http", "axum", "server"]
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/polaris_app"
repository.workspace = true
categories = ["web-programming::http-server", "asynchronous"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[features]
default = []
otel = []

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.2.1" }
polaris_graph = { path = "../polaris_graph", version = "0.2.1" }
polaris_core_plugins = { path = "../polaris_core_plugins", version = "0.2.1" }
axum = { version = "0.8", features = ["tokio"] }
hashbrown = "0.16.1"
tokio = { version = "1", features = ["rt", "sync", "net", "signal", "macros"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "propagate-header"] }
tracing = "0.1"
parking_lot = "0.12"
http = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
