[package]
name = "polaris_app"
version.workspace = true
description = "Shared HTTP server runtime for Polaris products."
edition.workspace = true
keywords = ["polaris-ai", "http", "axum", "server"]
license.workspace = true
readme = "README.md"
documentation = "https://docs.rs/polaris_app"
repository.workspace = true
categories = ["web-programming::http-server", "asynchronous"]
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[features]
default = []
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
ws = ["axum/ws"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.4.0" }
polaris_graph = { path = "../polaris_graph", version = "0.4.0" }
axum = { version = "0.8", features = ["tokio"] }
hashbrown = "0.16.1"
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync", "net", "signal", "macros"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "propagate-header"] }
tracing = "0.1"
parking_lot = "0.12"
http = "1"
opentelemetry = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
polaris_core_plugins = { path = "../polaris_core_plugins" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
