[package]
name = "polaris_core_plugins"
version.workspace = true
description = "Core infrastructure plugins for Polaris."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "plugin", "infrastructure"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.4.0" }
polaris_graph = { path = "../polaris_graph", version = "0.4.0" }
polaris_models = { path = "../polaris_models", version = "0.4.0", optional = true }
polaris_tools = { path = "../polaris_tools", version = "0.4.0", optional = true }
persistence_macros = { path = "persistence_macros", version = "0.4.0" }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }
polaris_app = { path = "../polaris_app", version = "0.4.0", optional = true, default-features = false }
polaris_dashboard = { path = "../polaris_dashboard", version = "0.4.0", optional = true }
axum = { version = "0.8", features = ["tokio"], optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "sync", "macros"] }
tokio-test = "0.4"

[features]
default = []
dashboard = ["dep:axum", "dep:chrono", "dep:polaris_app", "dep:polaris_dashboard"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]
test-utils = []
graph_tracing = []
models_tracing = ["dep:polaris_models"]
tools_tracing = ["dep:polaris_tools", "dep:polaris_models"]
