[package]
name = "polaris_core_plugins"
version.workspace = true
description = "Core infrastructure plugins for Polaris."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "plugin", "infrastructure"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.4.3" }
polaris_graph = { path = "../polaris_graph", version = "0.4.3" }
polaris_models = { path = "../polaris_models", version = "0.4.3" }
polaris_tools = { path = "../polaris_tools", version = "0.4.3" }
persistence_macros = { path = "persistence_macros", version = "0.4.3" }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
polaris_app = { path = "../polaris_app", version = "0.4.3", optional = true, default-features = false }
axum = { version = "0.8", features = ["tokio"], optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.31", optional = true }
tracing-opentelemetry = { version = "0.32", optional = true }
ts-rs = { workspace = true, optional = true }

tokio = { version = "1.43", features = ["rt", "sync", "time"], default-features = false }

[dev-dependencies]
tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "sync", "macros", "time", "net", "fs", "io-util"] }
tokio-test = "0.4"
reqwest = { version = "0.13", features = ["json"] }
tempfile = "3"

[features]
default = []
dashboard = ["dep:axum", "dep:polaris_app"]
# Enables the durable, on-disk [`FileSpanStore`] backend for
# `SpanStorePlugin`. Pulls in `tokio` fs support for atomic appends.
# Intentionally does not imply `dashboard` 〔 the wire types it needs
# (`SpanRecord`, `SpanKind`) are exposed unconditionally so umbrella
# `file-store` propagation does not drag the dashboard's axum dep into
# the default build.
file-store = ["tokio/fs", "tokio/io-util"]
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]
test-utils = []
# Generates TypeScript bindings for tracing dashboard wire types. Off by
# default so release builds do not pull `ts-rs` into the dep graph.
typegen = ["dashboard", "dep:ts-rs"]
