[package]
name = "polaris_core_plugins"
version.workspace = true
description = "Core infrastructure plugins for Polaris."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "plugin", "infrastructure"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.5" }
polaris_graph = { path = "../polaris_graph", version = "0.5" }
polaris_models = { path = "../polaris_models", version = "0.5" }
polaris_tools = { path = "../polaris_tools", version = "0.5" }
persistence_macros = { path = "persistence_macros", version = "0.5" }
futures-core = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
opentelemetry = { version = "0.32.0", optional = true }
opentelemetry_sdk = { version = "0.32.1", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "0.32.0", optional = true }
tracing-opentelemetry = { version = "0.33.0", optional = true }

tokio = { version = "1.43", features = [
    "rt",
    "sync",
    "time",
], default-features = false }

[dev-dependencies]
tokio = { version = "1.43", features = [
    "rt",
    "rt-multi-thread",
    "sync",
    "macros",
    "time",
    "net",
    "fs",
    "io-util",
] }
tokio-test = "0.4"
# Used by the tracing_plugin tests under `--all-features`: with `dashboard`
# enabled, `ModelsPlugin`/`ToolsPlugin` require `AppPlugin`.
polaris_app = { path = "../polaris_app", default-features = false }

[features]
default = []
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
]
# Forwards the dashboard variant to the model/tool plugins. With it enabled,
# `ModelsPlugin`/`ToolsPlugin` require `AppPlugin`; the tracing_plugin tests use
# this flag to add `AppPlugin` when the dependency is present.
dashboard = ["polaris_models/dashboard", "polaris_tools/dashboard"]
test-utils = []
