[package]
name = "polaris_graph"
version.workspace = true
description = "Graph execution primitives for Polaris (Layer 2)."
edition.workspace = true
keywords = []
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.1.1" }
tokio = { version = "1", features = ["time"] }
futures = "0.3"
hashbrown = "0.16.1"
parking_lot = "0.12.5"
nanoid = "0.4"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
proptest = "1"
