[package]
name = "polaris_graph"
version.workspace = true
description = "Graph execution primitives for Polaris (Layer 2)."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "graph", "agents", "async", "execution"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.4.0" }
tokio = { version = "1", features = ["time"] }
futures = "0.3"
hashbrown = { version = "0.17", features = ["serde"] }
parking_lot = "0.12.5"
nanoid = "0.5"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
proptest = "1"
serde_json = "1"
