[package]
name = "polaris_internal"
version.workspace = true
description = "Internal re-export layer for Polaris (use polaris-ai instead)."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai"]
categories = ["development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[features]
# `file-store` is on by default to preserve the historical behavior where
# `polaris_sessions` was pulled with default features. Disable via
# `default-features = false` on the consumer side if you want a `tokio/fs`-free
# build.
default = ["file-store"]
anthropic = ["polaris_model_providers/anthropic"]
openai = ["polaris_model_providers/openai"]
bedrock = ["polaris_model_providers/bedrock"]
tiktoken = ["polaris_models/tiktoken"]
# Enables the tracing-subscriber OTLP exporter and switches `polaris_app`'s
# HTTP request spans to OTel HTTP semantic-convention field names. Extracts
# incoming W3C `traceparent` headers (via the propagator installed by
# `OpenTelemetryPlugin`) to continue a distributed trace; requests with no
# upstream context start a fresh trace.
otel = ["polaris_core_plugins/otel", "polaris_app/otel"]
sessions-http = ["polaris_sessions/sessions-http"]
# `MockClock` and `MockIOProvider` for downstream test code.
test-utils = ["polaris_core_plugins/test-utils"]
# Filesystem-backed `polaris_sessions::FileStore` for session state.
file-store = ["polaris_sessions/file-store"]
typegen = ["polaris_sessions/typegen"]
# Enables the dashboard HTTP surface (tools/models snapshots) across `polaris_tools` and `polaris_models`.
# Pulls axum and `polaris_app` into the graph. `polaris_core_plugins/dashboard` forwards to the same
# tools/models surface so the umbrella knob stays consistent across every plugin crate.
dashboard = [
    "polaris_tools/dashboard",
    "polaris_models/dashboard",
    "polaris_core_plugins/dashboard",
]

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.5" }
polaris_graph = { path = "../polaris_graph", version = "0.5" }
polaris_agent = { path = "../polaris_agent", version = "0.5" }
polaris_tools = { path = "../polaris_tools", version = "0.5" }
polaris_model_providers = { path = "../polaris_model_providers", version = "0.5" }
polaris_models = { path = "../polaris_models", version = "0.5" }
polaris_core_plugins = { path = "../polaris_core_plugins", version = "0.5" }
polaris_sessions = { path = "../polaris_sessions", version = "0.5", default-features = false }
polaris_shell = { path = "../polaris_shell", version = "0.5" }
polaris_app = { path = "../polaris_app", version = "0.5", default-features = false }

[lints]
workspace = true
