[package]
name = "polaris_macro_utils"
version = "0.0.1"
description = "Shared utilities for Polaris procedural macro crates."
edition = "2024"
keywords = []
license = "Apache-2.0"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "3"
