[package]
name = "polaris_macro_utils"
version.workspace = true
description = "Shared utilities for Polaris procedural macro crates."
edition.workspace = true
keywords = []
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "3"
