[package]
name = "polaris_models"
version = "0.0.1"
description = "Model provider interface and registry for Polaris"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/RadiantAILabs/polaris"
rust-version = "1.93.0"

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.0.2" }
thiserror = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
base64 = "0.22"
futures-core = "0.3"

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
