[package]
name = "polaris_models"
version.workspace = true
description = "Model provider interface and registry for Polaris"
edition.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.1.1" }
thiserror = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
base64 = "0.22"
futures-core = "0.3"
tiktoken-rs = { version = "0.9", optional = true }

[features]
default = []
tiktoken = ["dep:tiktoken-rs"]

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
