[package]
name = "polaris_models"
version.workspace = true
description = "Model provider interface and registry for Polaris"
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "llm", "ai", "models", "providers"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[lints]
workspace = true

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.2.0" }
thiserror = "2.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "1.2.0"
base64 = "0.22"
futures-core = "0.3"
tiktoken-rs = { version = "0.9", optional = true }

[features]
default = []
tiktoken = ["dep:tiktoken-rs"]

[dev-dependencies]
tokio = { version = "1.43", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
