[package]
name = "polaris_sessions"
version.workspace = true
description = "Session management and orchestration for Polaris agents."
edition.workspace = true
documentation = "https://docs.rs/polaris-ai"
keywords = ["polaris-ai", "sessions", "agents", "async", "orchestration"]
categories = ["asynchronous", "development-tools"]
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--cfg", "docsrs_dep"]

[lints]
workspace = true

[features]
default = ["file-store"]
file-store = ["tokio/fs"]
http = ["dep:polaris_app", "dep:axum"]

[dependencies]
polaris_system = { path = "../polaris_system", version = "0.3.0" }
polaris_graph = { path = "../polaris_graph", version = "0.3.0" }
polaris_agent = { path = "../polaris_agent", version = "0.3.0" }
polaris_core_plugins = { path = "../polaris_core_plugins", version = "0.3.0" }
hashbrown = "0.16.1"
nanoid = "0.4"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
thiserror = "2"
tokio = { version = "1", features = ["rt", "sync"] }
tracing = "0.1"

# Optional HTTP dependencies (enabled by `http` feature)
polaris_app = { path = "../polaris_app", version = "0.3.0", optional = true }
axum = { version = "0.8", features = ["tokio"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
reqwest = { version = "0.13", features = ["json"] }
serde_json = "1"
